--- a/public/style.css
+++ b/public/style.css
@@ -169,6 +169,24 @@ button {
   border-radius: 30px;
 }
 
+#questionContent iframe {
+  margin-top: 20px; /* espace entre la question et l'image */
+  border: 4px solid #1cbd51;
+  border-radius: 10px;
+  box-shadow: 0 10px 30px rgba(0, 0, 0, 0.2);
+}
+
+#correctionContent iframe {
+  margin-top: 20px; /* espace entre la question et l'image */
+  margin-left: auto;
+  margin-right: auto;
+  margin-bottom: 11px;
+  max-width: 60vh;
+  border: 4px solid #1cbd51;
+  border-radius: 10px;
+  box-shadow: 0 10px 30px rgba(0, 0, 0, 0.2);
+}
+
 button:hover {
   background-color: #388351;
   transform: scale(1.03);
